# calibrolino

./: .gitignore  README.rst  pyproject.toml
src/: calibrolino.py
src/calibrolino/: apps.py  controllers.py  gui_views.py  interfaces.py  launcher.py  models.py  views.py
tests/: minimal-v3.epub  test_calibrolino.py  test_models.py
