[build-system]
requires = ['setuptools>=61.0', 'wheel']
build-backend = "setuptools.build_meta"

[project]
name = "calibrolino"
version = "0.1"
authors = [
    {name="Imam Usmani"},
]
readme = "README.rst"
requires-python = ">=3.10"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]
description = "a script to upload calibre library to the tolino cloud"
dependencies = [
	'pytolino @ git+https://github.com/ImamAzim/pytolino.git@dev',
        'xdg-base-dirs',
        'varboxes',
	'pandas',
	'pandastable',
]

[project.optional-dependencies]
dev = [
	'pytest',
	'flake8',
	'ipython',
	'sphinx',
	'build',
	'twine',
	'sphinx-rtd-theme'
]

[project.urls]
"Source Code" = "https://github.com/ImamAzim/calibrolino"

[project.scripts]
calibrolino = "calibrolino.launcher:start_calibrolino"

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = 'single'
